# xrprimer

./: .clang-format  .cmake-format.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_CN.md  conanfile.txt  setup.cfg  setup.py  version.txt
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  lint.yml  publish-to-pypi.yml
cmake/: XRPrimerConfig.cmake.in  ceres.cmake  ceres_cmake.diff  code-coverage.cmake  compiler_options.cmake  conan.cmake  dependencies.cmake  eigen_cmake.patch  jsoncpp.cmake  setup_deps.cmake  unit_test_dep.cmake  utils.cmake  version.cmake
cpp/: CMakeLists.txt  README.md
cpp/pybind/: CMakeLists.txt  xrprimer_pybind.cpp  xrprimer_pybind.h
cpp/pybind/calibration/: CMakeLists.txt  calibrator_api.cpp  calibrator_api.h
cpp/pybind/common/: version.cpp  version.h
cpp/pybind/data_structure/: camera.cpp  camera.h  pose.cpp  pose.h
cpp/pybind/ops/: CMakeLists.txt  pnpsolver.cpp  pnpsolver.h
cpp/samples/: CMakeLists.txt  sample.cpp
cpp/tests/: CMakeLists.txt  calibrator_test.cpp  filesystem_utils.cpp  filesystem_utils.hpp  image_test.cpp  test.cpp  test_calibrator.cpp  test_camera.cpp  test_image.cpp  test_main.cpp  test_multi_camera_calibrator.py  test_pnpsolver.py  test_pose.cpp  test_version.cpp
cpp/xrprimer/: CMakeLists.txt
cpp/xrprimer/calibration/: CMakelists.txt  calibrator.cpp  calibrator.h  calibrator_api.cpp  calibrator_api.h
cpp/xrprimer/common/: config.h.in  version.cpp  version.h
cpp/xrprimer/data_structure/: image.cpp  image.h  math_util.h  pose.cpp  pose.h
cpp/xrprimer/data_structure/camera/: camera.cpp  camera.h  fisheye_camera.cpp  fisheye_camera.h  json_helper_internal.h  omni_camera.cpp  omni_camera.h  pinhole_camera.cpp  pinhole_camera.h
cpp/xrprimer/utils/: logging.cpp  logging.h
dockerfiles/publish_manylinux/: Dockerfile  build_publish_docker.sh
dockerfiles/runtime_ubt18/: Dockerfile  build_runtime_docker.sh
docs/en/: Doxyfile  Doxyfile.in  api.rst  build_docs.py  changelog.md  conf.py  faq.md  index.rst  test.md
docs/en/data_structure/: camera.md  image.md  keypoints.md  limbs.md  pose.md
docs/en/installation/: cpp.md  python.md
docs/en/ops/: projector.md  triangulator.md
docs/en/services/xrnerf/: README.md
docs/en/tool/: calibrate_pinhole_cameras.md
docs/en/tools/: calibrate_multiple_cameras.md
docs/en/transform/: camera_convention.md
docs/en/visualization/: keypoints_visualization.md
docs/en/web_renderer/xrnerf/: README.md
docs/python/: install.md  test.md  triangulation.md
python/: .pre-commit-config.yaml  README.md  setup.cfg  setup.py
python/config/calibration/: mview_fisheye_calibrator.py  mview_pinhole_calibrator.py  sview_fisheye_distortion_calibrator.py
python/requirements/: test.txt
python/test/calibration/: test_calibrator.py  test_mview_calibrator.py  test_sview_intrinsic_calibrator.py
python/test/data_structure/: test_fisheye_camera_parameter.py  test_omni_camera_parameter.py  test_pinhole_camera_parameter.py
python/test/ops/: test_projection.py
python/test/test_data_structure/: test_camera_parameter.py  test_fisheye_camera_parameter.py  test_omni_camera_parameter.py  test_pinhole_camera_parameter.py
python/test/test_ops/: test_projector.py  test_triangulator.py
python/test/test_transform/test_camera/: test_distortion.py
python/test/test_transform/test_convention/: test_camera_convention.py
python/test/transform/camera/: test_distortion.py  test_extrinsic.py
python/test/transform/convention/: test_camera_convention.py
python/test/utils/: test_ffmpeg_utils.py  test_log_utils.py
python/tests/calibration/: test_mview_calibrator.py  test_sview_intrinsic_calibrator.py
python/tests/data_structure/: test_fisheye_camera_parameter.py  test_keypoints.py  test_limbs.py  test_omni_camera_parameter.py  test_pinhole_camera_parameter.py
python/tests/ops/: test_projection.py  test_triangulation.py
python/tests/transform/: test_image.py  test_limbs_transform.py
python/tests/transform/camera/: test_distortion.py  test_extrinsic.py
python/tests/transform/convention/: test_camera_convention.py  test_keypoints_convention.py
python/tests/utils/: test_ffmpeg_utils.py  test_log_utils.py  test_path_utils.py
python/tests/visualization/: test_plot_video.py
python/tests/visualization/keypoints/: test_visualize_keypoints2d.py  test_visualize_keypoints3d.py
python/tests/visualization/matplotlib/: test_plot_frame.py  test_plot_frame_plt.py  test_plot_video.py
python/tests/visualization/opencv/: test_plot_frame.py  test_plot_video.py  test_plot_video_cv2.py
python/xrprimer/: __init__.py  version.py
python/xrprimer/calibration/: __init__.py  base_calibrator.py  builder.py  calibrator.py  mview_fisheye_calibrator.py  mview_pinhole_calibrator.py  sview_fisheye_calibrator.py
python/xrprimer/data_structure/: __init__.py  keypoints.py  limbs.py
python/xrprimer/data_structure/camera/: __init__.py  camera.py  fisheye_camera.py  omni_camera.py  pinhole_camera.py
python/xrprimer/io/: exr_reader.py
python/xrprimer/ops/: __init__.py
python/xrprimer/ops/projection/: __init__.py  base_projector.py  builder.py  opencv_projector.py
python/xrprimer/utils/: __init__.py  ffmpeg_utils.py  log_utils.py  path_utils.py  synbody_utils.py  visualization_utils.py
python/xrprimer/visualization/: plot_video.py
requirements/: synbody.txt  test.txt
scripts/: build_ios.sh  run_pinhole_camera_calib.sh
tools/web_renderer/: run_xrnerf_viewer.bat
utils/: run_pinhole_camera_calib.sh
viewers/nerf_viewer/: README.md
viewers/nerf_viewer/bridge_server/: actions.py  bridge_server_subprocess.py  requirements.txt  run_viewer.py  server.py
web_renderer/XRMoCap/: package-lock.json  package.json
web_renderer/XRMoCap/src/: App.jsx  actions.jsx  index.jsx  index.scss  reducer.js
web_renderer/xrnerf/: package-lock.json  package.json
web_renderer/xrnerf/public/: index.html  manifest.json
web_renderer/xrnerf/src/: App.jsx  actions.jsx  index.jsx  index.scss  reducer.js  store.js
(+67 files in other folders)
